# splatial

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  pyproject.toml  run.sh
.github/workflows/: docker-publish.yml
docs/: DATA_FLOW.md
docs/analysis/: 2026-06-04-postopt-vs-feedforward-rootcause.md
docs/debugging/: 2026-06-02-reconstruction-quality-and-viewer-bugs.md
docs/references/: StreamSplat_Project_Spec.md
docs/superpowers/plans/: 2026-06-01-splatial-foundation.md  2026-06-05-phone-docker-onboarding.md
docs/superpowers/specs/: 2026-06-01-ar-scan-edit-design.md  2026-06-05-phone-docker-onboarding-design.md
experiments/: .gitignore  RESULTS.md  eval_heldout.py  research_plan.json
experiments/baseline/: SETTINGS.md
modules/capture/: README.md  frames.py
modules/capture/tests/: test_frames.py
modules/reconstruct/: README.md  anysplat_provider.py  cli.py  factory.py  optimize_ply.py  preprocess.py  vggt_provider.py
modules/scene_store/: README.md  contracts.py  store.py
modules/serve/: __main__.py  app.py  gpu.py  net.py
notebooks/: splatial_colab.ipynb  yonosplat_colab.ipynb
tools/: fix_opacity.py  frames_to_re10k.py  patch_anysplat.py  ply_to_scene.py  postopt.sh  postopt_mcmc.sh  postopt_to_scene.py  recon_local16.py  upload_server.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/src/: level.js  main.js  objects.js  sceneLoader.js  splatViewer.js  walk.js
web/tests/: viewer.spec.js
web/tools/: orbit-clean.mjs  orbit-shots.mjs  orbit-video.mjs
(+8 files in other folders)
