[project]
name = "splatial"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
serve = ["flask>=3.0", "qrcode>=7.4"]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
testpaths = ["modules"]
addopts = "-q"
